Updating the page as per the client requests

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/794f38cff9.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="index.css">
-    <title>Prime</title>
+    <title>Prime Gráfica</title>
   </head>
   <body>
     <div id="root"></div>
